--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,7 +1,7 @@
 body {
     color: #565656;
     font-family: nudista-web,Helvetica,Arial,sans-serif;
-    font-size: 15px;
+    font-size: 15px !important;
     line-height: 21px;
     letter-spacing: .02em;
     text-rendering: optimizeLegibility;
@@ -9,12 +9,12 @@ body {
 .header {
     width: 100%;
     max-width: 100%;
-    position: absolute;
+    position: inherit;
     display: block;
 }
 header.header .header_main {
     display: flex;
-    height: 110px;
+    height: 90px;
     font-family: nudista-web,Helvetica,Arial,sans-serif;
     color: #ffffff;
     background-color: #ac182e;
@@ -26,6 +26,9 @@ header.header .header_main {
     max-width: 250px;
     width: 100%;
     padding: 20px 0px 20px 30px;
+}
+.header_logo > a > img {
+    width: 100%;
 }
 /* Main nav in header section */
 header.header .header_main #header_nav {
@@ -40,7 +43,7 @@ header.header .header_main #header_nav {
 header.header .header_main #header_nav .main_menu {
     width: 100%;
     max-width: calc(100% - 130px);
-    height: 110px;
+    height: 90px;
 }
 header.header .header_main #header_nav .main_menu ul.menu {
     width: 100%;
@@ -62,7 +65,7 @@ header.header .header_main #header_nav .main_menu ul.menu>li {
 header.header .header_main #header_nav .main_menu ul.menu>li>a {
     text-align: center;
     padding: 0 10%;
-    height: 110px;
+    height: 90px;
     width: 100%;
     justify-content: center;
     align-items: center;
@@ -75,6 +78,9 @@ header.header .header_main #header_nav .main_menu ul.menu a {
     font-weight: 700;
     font-size: .93333em;
     text-decoration: none;
+    text-decoration-line: none;
+    text-decoration-style: initial;
+    text-decoration-color: initial;
     text-transform: uppercase;
     color: #ffffff;
 }
@@ -92,7 +98,7 @@ header.header .header_main #header_nav .nav_utility .menu {
     -webkit-box-direction: normal;
     flex-direction: column;
     width: 100%;
-    height: 110px;
+    height: 90px;
 }
 header.header .header_main #header_nav .nav_utility .menu li {
     flex: 1 1 auto;
